--- a/ABOUT.html
+++ b/ABOUT.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SmartPayroll - About</title>
+  <title>SmartPayroll</title>
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
@@ -43,4 +43,5 @@
     <a href="#">Terms of Use</a>
 </footer>
 </html>
+
 
