--- a/ABOUT.html
+++ b/ABOUT.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartPayroll</title>
+  <link rel="icon" type="image/png" href="SPlogo.png">
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
@@ -43,5 +44,6 @@
     <a href="#">Terms of Use</a>
 </footer>
 </html>
+
 
 
