added logo on top

--- a/LOGIN.html
+++ b/LOGIN.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartPayroll</title>
+  <link rel="icon" type="image/png" href="SPlogo.png">
   <link rel="stylesheet" href="style1.css">
   <script src="script.js" defer></script>
 </head>
@@ -48,4 +49,5 @@
     <a href="#">Terms of Use</a>
 </footer>
 </html>
+
 
