--- a/public/EMPLOYEES.html
+++ b/public/EMPLOYEES.html
@@ -76,7 +76,7 @@
             <select name="dept" required>
               <option value="">Select Department</option>
               <option>Human Resources</option>
-              <option>Finance and Accounting</option>
+              <option>Finance</option>
               <option>Information Technology (IT)</option>
             </select>
           </div>
@@ -175,7 +175,7 @@
         <label>Department</label>
         <select name="dept" required>
           <option>Human Resources</option>
-          <option>Finance and Accounting</option>
+          <option>Finance</option>
           <option>Information Technology (IT)</option>
         </select>
       </div>
@@ -531,3 +531,4 @@ function searchEmployees() {
   </script>
 </body>
 </html>
+
