Fixed Drop down filter

--- a/public/DTR.html
+++ b/public/DTR.html
@@ -45,9 +45,9 @@
 
         <label for="department">Department:</label>
         <select id="department">
-          <option value="all">All Departments</option>
-          <option value="HR">Human Resources</option>
-          <option value="IT">IT</option>
+          <option value="all">All</option>
+          <option value="Human Resources">Human Resources</option>
+          <option value="Information Technology">Information Technology</option>
           <option value="Finance">Finance</option>
         </select>
 
@@ -247,3 +247,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
