--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -5,123 +5,170 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartPayroll | Dashboard</title>
   <link rel="icon" type="image/png" href="SPlogo.png">
+
+  <!-- Main Dashboard Styles -->
   <link rel="stylesheet" href="dashboard.css">
-    <script src="script.js" defer></script>
+
+  <!-- Chart-specific Styles -->
+  <link rel="stylesheet" href="chart.css">
+
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="script.js" defer></script>
 </head>
+
 <body>
   <div class="container">
-  <!-- Sidebar -->
-  <aside class="sidebar">
-    <div class="sidebar-header">
-      <img src="SPlogo.png" alt="Logo" class="logo">
-    </div>
-    <ul class="menu">
-      <li class="active">
-        <a href="DASHBOARD.html">
-          <img src="bar-graph.png" class="icon"> Dashboard
-        </a>
-      </li>
-      <li>
-        <a href="EMPLOYEES.html">
-          <img src="group.png" class="icon"> Employees
-        </a>
-      </li>
-      <li>
-        <a href="DTR.html">
-          <img src="timetable.png" class="icon"> Daily Time Record
-        </a>
-      </li>
-      <li>
-        <a href="PAYROLL.html">
-          <img src="user.png" class="icon"> Payroll
-        </a>
-      </li>
-      <li>
-        <a href="REPORTS.html">
-          <img src="business-report.png" class="icon"> Reports
-        </a>
-      </li>
-      <li>
-        <a href="SETTINGS.html">
-          <img src="gear.png" class="icon"> Settings
-        </a>
-      </li>
-    </ul>
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="SPlogo.png" alt="Logo" class="logo">
+      </div>
+      <ul class="menu">
+        <li class="active">
+          <a href="DASHBOARD.html">
+            <img src="bar-graph.png" class="icon"> Dashboard
+          </a>
+        </li>
+        <li>
+          <a href="EMPLOYEES.html">
+            <img src="group.png" class="icon"> Employees
+          </a>
+        </li>
+        <li>
+          <a href="DTR.html">
+            <img src="timetable.png" class="icon"> Daily Time Record
+          </a>
+        </li>
+        <li>
+          <a href="PAYROLL.html">
+            <img src="user.png" class="icon"> Payroll
+          </a>
+        </li>
+        <li>
+          <a href="REPORTS.html">
+            <img src="business-report.png" class="icon"> Reports
+          </a>
+        </li>
+        <li>
+          <a href="SETTINGS.html">
+            <img src="gear.png" class="icon"> Settings
+          </a>
+        </li>
+      </ul>
 
-    <div class="logout-container">
-      <button id="logoutBtn" class="logout-btn">
-      <img src="logout.png" class="icon"/>Logout
-    </button>
-    </div>
-  </aside>
+      <div class="logout-container">
+        <button id="logoutBtn" class="logout-btn">
+          <img src="logout.png" class="icon"/>Logout
+        </button>
+      </div>
+    </aside>
 
     <!-- Main Content -->
     <main class="main">
       <h1>Dashboard</h1>
 
       <div class="cards">
+        <!-- Total Employees -->
         <div class="card">
-          <h3><img src="groupb.png" class="icon"> Total employees</h3>
+          <h3><img src="groupb.png" class="icon"> Total Employees</h3>
           <p class="value" id="employeeCount">0</p>
         </div>
 
+        <!-- Pending Payroll -->
         <div class="card">
-          <h3>Payroll processed</h3>
-          <p class="value">0</p>
+          <h3><img src="pending.png" class="icon"> Pending Payroll</h3>
+          <p class="value" id="pendingCount">0</p>
         </div>
+
+        <!-- Payroll Cost This Month -->
+        <div class="card">
+          <h3>Payroll Cost This Month</h3>
+          <div class="chart-container">
+            <canvas id="payrollChart"></canvas>
+          </div>
+        </div>
+
+        <!-- Payroll Processed -->
+        <div class="card">
+          <h3>Payroll Processed</h3>
+          <p class="value" id="processedCount">0</p>
+        </div>
+
       </div>
     </main>
   </div>
 
-<script>
-window.addEventListener("DOMContentLoaded", () => {
+  <script>
+  window.addEventListener("DOMContentLoaded", () => {
+    // Fetch Employee Count
+    fetch("/api/employees/count")
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById("employeeCount").textContent = data.total;
+      })
+      .catch(() => console.warn("Could not fetch employee count."));
 
-  // Get user info (fix)
-  fetch("/api/user")
-    .then(res => res.json())
-    .then(user => {
-      const usernameEl = document.getElementById("username");
-      if (usernameEl) usernameEl.textContent = user.name;
-    })
-    .catch(() => console.warn("User info not found"));
+    // Fetch Payroll Data
+    // DUMMY DATA LANG ITO
+    // DUMMY DATA LANG ITO
+    // DUMMY DATA LANG ITO
+const data = {
+  processed: 12,
+  pending: 4,
+  paidCost: 50000,
+  pendingCost: 10000,
+  overdueCost: 5000
+};
 
-  // Get employee count (fix)
-  fetch("/api/employees/count")
-    .then(res => res.json())
-    .then(data => {
-      console.log("Employee count:", data); // debug line
-      document.getElementById("employeeCount").textContent = data.total;
-    })
-    .catch(err => console.error("Error fetching employee count:", err));
+document.getElementById("processedCount").textContent = data.processed;
+document.getElementById("pendingCount").textContent = data.pending;
 
-  // Fade animations
-  const main = document.querySelector(".main");
+const ctx = document.getElementById("payrollChart").getContext("2d");
+new Chart(ctx, {
+  type: "pie",
+  data: {
+    labels: ["Paid", "Pending", "Overdue"],
+    datasets: [{
+      data: [data.paidCost, data.pendingCost, data.overdueCost],
+      backgroundColor: ["#4CAF50", "#FFC107", "#F44336"]
+    }]
+  },
+  options: {
+    plugins: {
+      legend: {
+        position: "bottom"
+      }
+    }
+  }
+});
 
-  // Fade in when page loads
-  setTimeout(() => {
-    main.classList.add("show");
-  }, 50);
 
-  // Fade out when leaving page
-  document.querySelectorAll("a").forEach(link => {
-    link.addEventListener("click", e => {
-      e.preventDefault();
-      main.classList.remove("show");
-      main.classList.add("hide");
-      setTimeout(() => {
-        window.location.href = link.href;
-      }, 500); 
+    // Fade Animation
+    const main = document.querySelector(".main");
+    setTimeout(() => main.classList.add("show"), 50);
+
+    document.querySelectorAll("a").forEach(link => {
+      link.addEventListener("click", e => {
+        e.preventDefault();
+        main.classList.remove("show");
+        main.classList.add("hide");
+        setTimeout(() => {
+          window.location.href = link.href;
+        }, 500);
+      });
+    });
+
+    // Logout
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      if (confirm("Are you sure you want to log out?")) {
+        fetch("/logout")
+          .then(() => window.location.href = "/LOGIN.html")
+          .catch(err => alert("Error logging out. Please try again."));
+      }
     });
   });
-
-  document.getElementById("logoutBtn").addEventListener("click", () => {
-    if (confirm("Are you sure you want to log out?")) {
-      fetch("/logout")
-        .then(() => window.location.href = "/LOGIN.html")
-        .catch(err => alert("Error logging out. Please try again."));
-    }
-  });
-});
-</script>
+  </script>
 </body>
 </html>
