--- a/public/RESIGNED.html
+++ b/public/RESIGNED.html
@@ -46,7 +46,7 @@
               <th>Dept</th>
               <th>Position</th>
               <th>Status</th>
-              <th>Date Hired</th>
+              <th>Date Resigned</th>
               <th>Action</th>
             </tr>
           </thead>
@@ -74,7 +74,7 @@
         <label>Department</label>
         <select name="dept" required>
           <option>Human Resources</option>
-          <option>Finance and Accounting</option>
+          <option>Finance</option>
           <option>Information Technology (IT)</option>
         </select>
       </div>
@@ -96,8 +96,8 @@
       </div>
 
       <div class="form-group">
-        <label>Date Hired</label>
-        <input type="date" name="date_hired" />
+        <label>Date Resigned</label>
+        <input type="date" name="date_resigned" />
       </div>
 
       <div class="form-group">
@@ -152,6 +152,39 @@
   </div>
 </div>
 
+<!-- Confirm Reactivate Modal -->
+<div id="confirmReactivateModal" class="confirm-modal hidden">
+  <div class="confirm-modal-content">
+    <div class="confirm-modal-header">
+      <h2>Reactivate Employee</h2>
+      <button id="closeConfirmReactivate" class="close">&times;</button>
+    </div>
+    <div class="confirm-modal-body">
+      <p><b>Are you sure you want to reactivate this employee?</b></p>
+    </div>
+    <div class="confirm-modal-footer">
+      <button id="confirmReactivateYes" class="btn-save">Yes</button>
+      <button id="confirmReactivateNo" class="btn-cancel">Cancel</button>
+    </div>
+  </div>
+</div>
+
+<!-- Success Reactivate Modal -->
+<div id="successReactivateModal" class="success-modal hidden">
+  <div class="success-modal-content">
+    <div class="success-modal-header">
+      <h2>Success</h2>
+      <button id="closeSuccessReactivate" class="close">&times;</button>
+    </div>
+    <div class="success-modal-body">
+      <p><b>Employee reactivated successfully!</b></p>
+    </div>
+    <div class="success-modal-footer">
+      <button id="successReactivateOk" class="btn-save">OK</button>
+    </div>
+  </div>
+</div>
+
   <script>
     // Load Resigned Employees
 document.addEventListener("DOMContentLoaded", loadResignedEmployees);
@@ -177,7 +210,8 @@ async function loadResignedEmployees() {
         <td>${emp.dept}</td>
         <td>${emp.position}</td>
         <td>${emp.status}</td>
-        <td>${emp.date_hired ? emp.date_hired.split("T")[0] : ""}</td>
+        <td>${emp.date_resigned ? emp.date_resigned.split("T")[0] : ""}</td>
+
         <td>
           <button class="edit-btn" data-id="${emp.id}">Edit</button>
           <button class="reactivate-btn" data-id="${emp.id}">Reactivate</button>
@@ -190,30 +224,68 @@ async function loadResignedEmployees() {
   }
 }
 
-// Handle Reactivate Button
-document.addEventListener("click", async (e) => {
-  if (e.target.classList.contains("reactivate-btn")) {
-    const id = e.target.dataset.id;
-    if (!confirm("Do you want to reactivate this employee?")) return;
+/// ===== REACTIVATE MODALS =====
+const confirmReactivateModal = document.getElementById("confirmReactivateModal");
+const successReactivateModal = document.getElementById("successReactivateModal");
 
-    try {
-      const res = await fetch(`/api/resigned/reactivate/${id}`, {
-        method: "POST"
-      });
-      const result = await res.json();
+const confirmReactivateYes = document.getElementById("confirmReactivateYes");
+const confirmReactivateNo = document.getElementById("confirmReactivateNo");
+const closeConfirmReactivate = document.getElementById("closeConfirmReactivate");
+const closeSuccessReactivate = document.getElementById("closeSuccessReactivate");
+const successReactivateOk = document.getElementById("successReactivateOk");
 
-      if (res.ok) {
-        alert("✅ Employee reactivated successfully!");
-        loadResignedEmployees();
-      } else {
-        alert("❌ " + result.error);
-      }
-    } catch (err) {
-      console.error("Error reactivating employee:", err);
-      alert("❌ Failed to reactivate employee");
+let employeeToReactivate = null;
+
+// Open modal
+function openConfirmReactivateModal(id) {
+  employeeToReactivate = id;
+  confirmReactivateModal.classList.remove("hidden");
+}
+
+// Close modals
+function closeReactivateModals() {
+  confirmReactivateModal.classList.add("hidden");
+  successReactivateModal.classList.add("hidden");
+}
+
+// Close buttons
+confirmReactivateNo.addEventListener("click", closeReactivateModals);
+closeConfirmReactivate.addEventListener("click", closeReactivateModals);
+closeSuccessReactivate.addEventListener("click", closeReactivateModals);
+successReactivateOk.addEventListener("click", closeReactivateModals);
+
+// Handle "Yes" confirm
+confirmReactivateYes.addEventListener("click", async () => {
+  if (!employeeToReactivate) return;
+
+  try {
+    const res = await fetch(`/api/resigned/reactivate/${employeeToReactivate}`, {
+      method: "POST",
+    });
+
+    const result = await res.json();
+
+    if (res.ok) {
+      closeReactivateModals();
+      successReactivateModal.classList.remove("hidden");
+      loadResignedEmployees();
+    } else {
+      alert("❌ " + result.error);
     }
+  } catch (err) {
+    console.error("Error reactivating employee:", err);
+    alert("❌ Failed to reactivate employee");
   }
 });
+
+// Hook Reactivate button
+document.addEventListener("click", (e) => {
+  if (e.target.classList.contains("reactivate-btn")) {
+    const id = e.target.dataset.id;
+    openConfirmReactivateModal(id);
+  }
+});
+
 
 // Back to active employees page
 document.getElementById("activedBtn").addEventListener("click", () => {
@@ -302,7 +374,7 @@ document.getElementById("cancelEdit").addEventListener("click", () => {
 document.getElementById("editEmployeeForm").addEventListener("submit", async (e) => {
   e.preventDefault();
   const form = e.target;
-  const id = form.id.value;
+  const id = form.querySelector('input[name="id"]').value;
 
   const data = Object.fromEntries(new FormData(form).entries());
 
