--- a/public/EMPLOYEES.html
+++ b/public/EMPLOYEES.html
@@ -54,6 +54,7 @@
               <th>Name</th>
               <th>Dept</th>
               <th>Position</th>
+              <th>Employement Status</th>
               <th>Status</th>
               <th>Date Hired</th>
               <th>Action</th>
@@ -99,6 +100,15 @@
               <option>Probationary</option>
             </select>
           </div>
+
+          <div class="form-group">
+              <select name="activity_status" required>
+                <option value="">Select Activity Status</option>
+                <option>Active</option>
+                <option>Inactive</option>
+            </select>
+          </div>
+
 
           <!-- Date Hired -->
           <div class="input-group">
@@ -196,6 +206,14 @@
           <option>Probationary</option>
         </select>
       </div>
+
+      <div class="form-group">
+            <label>Activity Status</label>
+              <select name="activity_status" required>
+                <option>Active</option>
+                <option>Inactive</option>
+            </select>
+          </div>
 
       <div class="form-group">
         <label>Date Hired</label>
@@ -354,6 +372,7 @@ async function loadEmployees() {
         <td>${emp.dept}</td>
         <td>${emp.position}</td>
         <td>${emp.status}</td>
+        <td>${emp.activity_status || 'Inactive'}</td>
         <td>${emp.date_hired ? emp.date_hired.split("T")[0] : ""}</td>
         <td>
           <button class="edit-btn" data-id="${emp.id}">Edit</button>
