--- a/public/DTR.html
+++ b/public/DTR.html
@@ -44,15 +44,19 @@
         </select>
 
         <label for="department">Department:</label>
-
         <select id="department">
           <option value="all">All</option>
           <option value="Human Resources">Human Resources</option>
           <option value="Information Technology">Information Technology</option>
           <option value="Finance">Finance</option>
         </select>
-
         <button id="filterBtn">Load</button>
+      </div>
+
+      <!-- Search -->
+      <div class="search-bar">
+        <input type="text" placeholder="Last Name | First Name | Middle Name" />
+        <button class="search-btn">🔍</button>
       </div>
 
       <div class="dtr-container">
@@ -89,6 +93,9 @@ document.addEventListener("DOMContentLoaded", () => {
   const filterBtn = document.getElementById("filterBtn");
   const employeeList = document.getElementById("employeeList");
   const dtrTableBody = document.getElementById("dtrTable").querySelector("tbody");
+  const searchInput = document.querySelector(".search-bar input");
+  const searchBtn = document.querySelector(".search-btn");
+  let allEmployees = []; // store all employees for search
 
   // Load employees by department
   filterBtn.addEventListener("click", loadEmployees);
@@ -104,79 +111,104 @@ document.addEventListener("DOMContentLoaded", () => {
 
     try {
       const res = await fetch(`/api/employees?department=${dept}`);
-      if (!res.ok) throw new Error("Failed to fetch employees");
       const employees = await res.json();
 
-      if (!employees.length) {
-        employeeList.innerHTML = "<li>No employees found.</li>";
-        return;
-      }
+      console.log("Employees loaded:", employees); 
 
-      employeeList.innerHTML = employees.map(emp => `
-        <li data-id="${emp.id}" class="employee-item">${emp.name} — ${emp.dept}</li>
-      `).join("");
-
-      document.querySelectorAll(".employee-item").forEach(item => {
-        item.addEventListener("click", async () => {
-          document.querySelectorAll(".employee-item").forEach(li => li.classList.remove("active"));
-          item.classList.add("active");
-
-          const id = item.dataset.id;
-          await showEmployeeDTR(id, coverage);
-        });
-      });
+      allEmployees = employees;
+      renderEmployeeList(allEmployees);
     } catch (err) {
       console.error(err);
       employeeList.innerHTML = "<li>Error loading employees.</li>";
     }
   }
 
-  // Load DTR records per employee
-  async function showEmployeeDTR(employeeId, coverage) {
-  try {
-    const res = await fetch(`/api/dtr/${employeeId}?coverage=${coverage}`);
-    const dtr = await res.json();
-    if (!res.ok) throw new Error("Failed to load DTR");
 
-    if (!dtr.records || dtr.records.length === 0) {
-      dtrTable.innerHTML = `<tr><td colspan="7" style="text-align:center;">No DTR records found</td></tr>`;
+  // 🔍 Search employees by name
+  searchBtn.addEventListener("click", handleSearch);
+  searchInput.addEventListener("keyup", (e) => {
+    if (e.key === "Enter") handleSearch();
+    else handleSearch(); // live filter
+  });
+
+  function handleSearch() {
+  const query = searchInput.value.trim().toLowerCase();
+
+  // if no employees loaded yet
+  if (!allEmployees.length) {
+    employeeList.innerHTML = "<li>No employees loaded. Please click 'Load'.</li>";
+    return;
+  }
+
+  if (!query) {
+    renderEmployeeList(allEmployees);
+    return;
+  }
+
+  const filtered = allEmployees.filter(emp => 
+    emp.name.toLowerCase().includes(query)
+  );
+
+  renderEmployeeList(filtered);
+}
+
+
+  // Render employee list + click behavior
+  function renderEmployeeList(list) {
+    if (!list.length) {
+      employeeList.innerHTML = "<li>No employees found.</li>";
       return;
     }
 
-    // Format date and time display
-    const formatDate = (dateStr) => {
-      const date = new Date(dateStr);
-      return date.toLocaleDateString("en-US", {
-        month: "short",
-        day: "numeric",
-        year: "numeric",
+    employeeList.innerHTML = list.map(emp => `
+      <li data-id="${emp.id}" class="employee-item">${emp.name} — ${emp.dept}</li>
+    `).join("");
+
+    document.querySelectorAll(".employee-item").forEach(item => {
+      item.addEventListener("click", async () => {
+        document.querySelectorAll(".employee-item").forEach(li => li.classList.remove("active"));
+        item.classList.add("active");
+
+        const id = item.dataset.id;
+        const coverage = coverageSelect.value;
+        await showEmployeeDTR(id, coverage);
       });
-    };
+    });
+  }
 
-    // Format time
-    const formatTime = (timeStr) => {
-  if (!timeStr || timeStr === "0000-00-00 00:00:00") return "";
-  // Dummy to know if it works
-  const date = new Date(`1970-01-01T${timeStr}`);
-  if (isNaN(date)) return timeStr; 
-  return date.toLocaleTimeString("en-US", {
-    hour: "numeric",
-    minute: "2-digit",
-    hour12: true,
-  });
-};
+  // Load DTR records per employee
+  async function showEmployeeDTR(employeeId, coverage) {
+    try {
+      const res = await fetch(`/api/dtr/${employeeId}?coverage=${coverage}`);
+      const dtr = await res.json();
+      if (!res.ok) throw new Error("Failed to load DTR");
 
+      if (!dtr.records || dtr.records.length === 0) {
+        dtrTableBody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No DTR records found</td></tr>`;
+        return;
+      }
 
-    dtrTable.innerHTML = `
-      <tr>
-        <th>Date</th>
-        <th>Time In</th>
-        <th>Time Out</th>
-        <th>Undertime</th>
-        <th>Overtime</th>
-        <th>Late</th>
-      </tr>
-      ${dtr.records.map(r => `
+      const formatDate = (dateStr) => {
+        const date = new Date(dateStr);
+        return date.toLocaleDateString("en-US", {
+          month: "short",
+          day: "numeric",
+          year: "numeric",
+        });
+      };
+
+      const formatTime = (timeStr) => {
+        if (!timeStr || timeStr === "0000-00-00 00:00:00") return "";
+        const date = new Date(`1970-01-01T${timeStr}`);
+        if (isNaN(date)) return timeStr;
+        return date.toLocaleTimeString("en-US", {
+          hour: "numeric",
+          minute: "2-digit",
+          hour12: true,
+        });
+      };
+
+      dtrTableBody.innerHTML = dtr.records.map(r => `
         <tr data-id="${r.id}">
           <td>${formatDate(r.date)}</td>
           <td>${formatTime(r.time_in)}</td>
@@ -185,46 +217,38 @@ document.addEventListener("DOMContentLoaded", () => {
           <td contenteditable="true" class="editable overtime">${r.overtime || 0}</td>
           <td contenteditable="true" class="editable late">${r.late || 0}</td>
         </tr>
-      `).join("")}
-    `;
+      `).join("");
 
-    // Save edits
-    document.querySelectorAll(".editable").forEach(cell => {
-      cell.addEventListener("blur", async (e) => {
-        const row = e.target.closest("tr");
-        const id = row.dataset.id;
-        const undertime = row.querySelector(".undertime").innerText.trim();
-        const overtime = row.querySelector(".overtime").innerText.trim();
-        const late = row.querySelector(".late").innerText.trim();
+      document.querySelectorAll(".editable").forEach(cell => {
+        cell.addEventListener("blur", async (e) => {
+          const row = e.target.closest("tr");
+          const id = row.dataset.id;
+          const undertime = row.querySelector(".undertime").innerText.trim();
+          const overtime = row.querySelector(".overtime").innerText.trim();
+          const late = row.querySelector(".late").innerText.trim();
 
-        try {
-          await fetch(`/api/dtr/update/${id}`, {
-            method: "PUT",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ undertime, overtime, late })
-          });
-        } catch (err) {
-          console.error("Error saving DTR update:", err);
-        }
+          try {
+            await fetch(`/api/dtr/update/${id}`, {
+              method: "PUT",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ undertime, overtime, late })
+            });
+          } catch (err) {
+            console.error("Error saving DTR update:", err);
+          }
+        });
       });
-    });
 
-  } catch (err) {
-    console.error(err);
-    dtrTable.innerHTML = `<tr><td colspan="7" style="text-align:center;">Error loading DTR</td></tr>`;
+    } catch (err) {
+      console.error(err);
+      dtrTableBody.innerHTML = `<tr><td colspan="6" style="text-align:center;">Error loading DTR</td></tr>`;
+    }
   }
-}
-
 
   // Fade animations
   const main = document.querySelector(".main");
+  setTimeout(() => main.classList.add("show"), 50);
 
-  // Fade in
-  setTimeout(() => {
-    main.classList.add("show");
-  }, 50);
-
-  // Fade out on navigation
   document.querySelectorAll("a").forEach(link => {
     link.addEventListener("click", e => {
       e.preventDefault();
